fix word wrapping

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -10,7 +10,6 @@
 
 .post-area {
     line-height: 2;
-    white-space: nowrap;
 }
 
 .post-area h1 {
